RESOLVED FIXED242913
[WebAuthn] CBOR encoded extensions not passed along during assertions
https://bugs.webkit.org/show_bug.cgi?id=242913
Summary [WebAuthn] CBOR encoded extensions not passed along during assertions
pascoe@apple.com
Reported 2022-07-19 12:43:03 PDT
This was lost during the refactoring in https://bugs.webkit.org/show_bug.cgi?id=241199 such that extensions are only passed during create calls, this passes them along during assertions as well.
Attachments
pascoe@apple.com
Comment 1 2022-07-19 12:43:25 PDT
pascoe@apple.com
Comment 2 2022-07-19 12:55:18 PDT
EWS
Comment 3 2022-07-19 17:50:46 PDT
Committed 252626@main (c93cca1a0e69): <https://commits.webkit.org/252626@main> Reviewed commits have been landed. Closing PR #2557 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.