Cherry-pick c93cca1a0e69. rdar://problem/96912101

[WebAuthn] CBOR encoded extensions not passed along during assertions
    https://bugs.webkit.org/show_bug.cgi?id=242913
    rdar://96912101

    Reviewed by Chris Dumez.

    * Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
    (+[_WKWebAuthenticationPanel convertToCoreRequestOptionsWithOptions:]):
    * Source/WTF/wtf/cocoa/SpanCocoa.h:
    (WTF::asUInt8Span):
    * Source/WebCore/Modules/webauthn/AuthenticationExtensionsClientInputs.cpp:
    (WebCore::AuthenticationExtensionsClientInputs::fromCBOR):
    * Source/WebCore/Modules/webauthn/AuthenticationExtensionsClientInputs.h:
    * Source/WebKit/UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
    (+[_WKWebAuthenticationPanel convertToCoreCreationOptionsWithOptions:]):
    (+[_WKWebAuthenticationPanel convertToCoreRequestOptionsWithOptions:]):
    Pass along CBOR encoded extension to ASC, use span to avoid copy. Rest of callsites to be fixed in
    https://bugs.webkit.org/show_bug.cgi?id=242919.

    Canonical link: https://commits.webkit.org/252626@main

Canonical link: https://commits.webkit.org/252432.12@safari-7614.1.22.1-branch